--- a/templates/admin/account/overview.html
+++ b/templates/admin/account/overview.html
@@ -9,9 +9,9 @@
     </p>
 
     <div class="select" style="float:right">
-        <select v-model="committee">
+        <select v-model="cost_centre">
             <option :value="false">Filtrera på nämnd</option>
-            <option v-for="committee in committees" v-text="committee + ' (' + expenses.filter(x => x.committees.indexOf(committee) > -1).length + ' + ' + invoices.filter(x => x.committees.indexOf(committee) > -1).length + ')'" :value="committee"></option>
+            <option v-for="cost_centre in cost_centres" v-text="cost_centre + ' (' + expenses.filter(x => x.cost_centres.indexOf(cost_centre) > -1).length + ' + ' + invoices.filter(x => x.cost_centres.indexOf(cost_centre) > -1).length + ')'" :value="cost_centre"></option>
         </select>
     </div>
     <h2>Utlägg</h2>
@@ -23,7 +23,7 @@
                 <th class="right">Verifikationsnummer</th>
             </tr>
         </thead>
-        <tbody v-for="expense in expenses" v-if="committee == false || expense.committees.indexOf(committee) > -1">
+        <tbody v-for="expense in expenses" v-if="cost_centre == false || expense.cost_centres.indexOf(cost_centre) > -1">
             <tr>
                 <td>
                     <a v-bind:href="'/expenses/' + expense.id" v-text="expense.description"></a>
@@ -50,7 +50,7 @@
                 <td colspan="3">
                     <table>
                         <tr v-for="expensePart in expense.expense_parts">
-                            <td style="text-align: right; width: 50%;" v-text="expensePart.committee_name + ' > ' + expensePart.cost_centre_name + ' > ' + expensePart.budget_line_name"></td>
+                            <td style="text-align: right; width: 50%;" v-text="expensePart.cost_centre + ' > ' + expensePart.secondary_cost_centre + ' > ' + expensePart.budget_line"></td>
                             <td>
                                 <span v-text="expensePart.amount + ' kr'"></span>
                                 <button style="background: none; padding: 4px; box-shadow: none; margin-left: auto"
@@ -83,7 +83,7 @@
                 <th class="right">Verifikationsnummer</th>
             </tr>
         </thead>
-        <tbody v-for="invoice in invoices" v-if="committee == false || invoice.committees.indexOf(committee) > -1">
+        <tbody v-for="invoice in invoices" v-if="cost_centre == false || invoice.cost_centres.indexOf(cost_centre) > -1">
             <tr>
                 <td><a v-bind:href="'/invoices/' + invoice.id" v-text="invoice.description"></a></td>
                 <td v-text="invoice.invoice_date"></td>
@@ -105,7 +105,7 @@
                 <td colspan="3">
                     <table>
                         <tr v-for="invoicePart in invoice.invoice_parts">
-                            <td style="text-align: right; width: 50%;" v-text="invoicePart.committee_name + ' > ' + invoicePart.cost_centre_name + ' > ' + invoicePart.budget_line_name"></td>
+                            <td style="text-align: right; width: 50%;" v-text="invoicePart.cost_centre + ' > ' + invoicePart.secondary_cost_centre + ' > ' + invoicePart.budget_line_name"></td>
                             <td v-text="invoicePart.amount + ' kr'"></td>
                         </tr>
                         <tr style="font-weight: bold;">
@@ -125,8 +125,8 @@
         el: '#data', 
         data: function () {
             return {
-                committee: false,
-                committees: [],
+                cost_centre: false,
+                cost_centres: [],
                 expenses: {% autoescape off %}{{ expenses }}{% endautoescape %},
                 invoices: {% autoescape off %}{{ invoices }}{% endautoescape %}
             }
@@ -185,11 +185,11 @@
             }
         },
         created: function() {
-            this.committees = Array.from(new Set([
-                ...this.expenses.flatMap(x => x.committees),
-                ...this.invoices.flatMap(x => x.committees),
+            this.cost_centres = Array.from(new Set([
+                ...this.expenses.flatMap(x => x.cost_centres),
+                ...this.invoices.flatMap(x => x.cost_centres),
             ]))
-            this.committees.sort((a, b) => a.localeCompare(b, 'sv-SE'))
+            this.cost_centres.sort((a, b) => a.localeCompare(b, 'sv-SE'))
         }
     })
 </script>
