--- a/templates/admin/attest/overview.html
+++ b/templates/admin/attest/overview.html
@@ -9,9 +9,9 @@
         klicka på ett kvitto för att komma till dess specifika vy.
     </p>
     <div class="select" style="float:right">
-        <select v-model="committee">
+        <select v-model="cost_centre">
             <option :value="false">Filtrera på nämnd</option>
-            <option v-for="committee in committees" v-text="committee + ' (' + expenses.filter(x => x.committees.indexOf(committee) > -1).length + ' + ' + invoices.filter(x => x.committees.indexOf(committee) > -1).length + ')'" :value="committee"></option>
+            <option v-for="cost_centre in cost_centres" v-text="cost_centre + ' (' + expenses.filter(x => x.cost_centres.indexOf(cost_centre) > -1).length + ' + ' + invoices.filter(x => x.cost_centres.indexOf(cost_centre) > -1).length + ')'" :value="cost_centre"></option>
         </select>
     </div>
     <h2>Utlägg</h2>
@@ -25,11 +25,11 @@
                 <th class="right">Belopp</th>
             </tr>
         </thead>
-        <tr v-for="expense in expenses" v-if="committee == false || expense.committees.indexOf(committee) > -1">
+        <tr v-for="expense in expenses" v-if="cost_centre == false || expense.cost_centres.indexOf(cost_centre) > -1">
             <td class="left" v-text="expense.id"></td>
             <td><a :href="'/expenses/' + expense.id" v-text="expense.description"></a></td>
             <td><a :href="'/users/' + expense.owner_username" v-text="expense.owner_first_name + ' ' + expense.owner_last_name"></a></td>
-            <td v-text="expense.committees.join(', ')"></td>
+            <td v-text="expense.cost_centres.join(', ')"></td>
             <td class="right" v-text="expense.amount + ' kr'"></td>
         </tr>
     </table>
@@ -46,11 +46,11 @@
                 <th class="right">Belopp</th>
             </tr>
         </thead>
-        <tr v-for="invoice in invoices" v-if="committee == false || invoice.committees.indexOf(committee) > -1">
+        <tr v-for="invoice in invoices" v-if="cost_centre == false || invoice.cost_centres.indexOf(cost_centre) > -1">
             <td class="left" v-text="invoice.id"></td>
             <td><a :href="'/invoices/' + invoice.id" v-text="invoice.description"></a></td>
             <td><a :href="'/users/' + invoice.owner_username" v-text="invoice.owner_first_name + ' ' + invoice.owner_last_name"></a></td>
-            <td v-text="invoice.committees.join(', ')"></td>
+            <td v-text="invoice.cost_centres.join(', ')"></td>
             <td class="right" v-text="invoice.amount + ' kr'"></td>
         </tr>
     </table>
@@ -62,18 +62,18 @@
         el: '#app', 
         data: function () {
             return {
-                committee: false,
+                cost_centre: false,
                 expenses: {% autoescape off %}{{ expenses }}{% endautoescape %},
                 invoices: {% autoescape off %}{{ invoices }}{% endautoescape %},
-                committees: []
+                cost_centres: []
             }
         },
         created: function() {
-            this.committees = Array.from(new Set([
-                ...this.expenses.flatMap(x => x.committees),
-                ...this.invoices.flatMap(x => x.committees),
+            this.cost_centres = Array.from(new Set([
+                ...this.expenses.flatMap(x => x.cost_centres),
+                ...this.invoices.flatMap(x => x.cost_centres),
             ]))
-            this.committees.sort((a, b) => a.localeCompare(b, 'sv-SE'));
+            this.cost_centres.sort((a, b) => a.localeCompare(b, 'sv-SE'));
         },
     })
 </script>
