--- a/templates/admin/expenses/overview.html
+++ b/templates/admin/expenses/overview.html
@@ -6,9 +6,9 @@
 {% block content %}
 <div id="app">
     <div class="select" style="margin-left: 10px;float:right">
-        <select v-model="committee" v-on:change="move">
+        <select v-model="cost_centre" v-on:change="move">
             <option :value="''">Filtrera på nämnd (visa alla)</option>
-            <option v-for="committee in committees.sort((a, b) => a.localeCompare(b, 'sv-SE'))" v-text="committee" :value="committee"></option>
+            <option v-for="cost_centre in cost_centres.sort((a, b) => a.localeCompare(b, 'sv-SE'))" v-text="cost_centre" :value="cost_centre"></option>
         </select>
     </div>
     <div class="clearfix"></div>
@@ -32,8 +32,8 @@
                     <td class="no-wrap"><a href="{% url 'expenses-show' expense.id %}">{{ expense.status }}</a></td>
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.description|capfirst }}</a></td>
                     <td class="no-wrap"><a href="{% url 'user-show' expense.owner.user.username %}">{{ expense.owner }}</a></td>
-                    <td>{% for committee in expense.committees %}
-                        {{ committee.committee_name }}{% if not forloop.last %}, {% endif %}
+                    <td>{% for cost_centre in expense.cost_centres %}
+                        {{ cost_centre.cost_centre }}{% if not forloop.last %}, {% endif %}
                     {% endfor %}
                     </td>
                     <td class="right no-wrap">{{ expense.total_amount|intcomma }} kr</td>
@@ -54,15 +54,15 @@
         <div class="pagination">
             <span class="step-links">
                 {% if expenses.has_previous %}
-                    <a :href="'?page={{ expenses.previous_page_number }}&committee=' + committee">Föregående</a>
+                    <a :href="'?page={{ expenses.previous_page_number }}&cost_centre=' + cost_centre">Föregående</a>
                 {% endif %}
 
                 {% for i in expenses.paginator.page_range %}
-                    <a :href="'?page={{ i }}&committee=' + committee" {% if i == expenses.number %} class="active"{% endif %}>{{i}}</a>
+                    <a :href="'?page={{ i }}&cost_centre=' + cost_centre" {% if i == expenses.number %} class="active"{% endif %}>{{i}}</a>
                 {% endfor %}
 
                 {% if expenses.has_next %}
-                    <a :href="'?page={{ expenses.next_page_number }}&committee=' + committee">Nästa</a>
+                    <a :href="'?page={{ expenses.next_page_number }}&cost_centre=' + cost_centre">Nästa</a>
                 {% endif %}
             </span>
         </div>
@@ -84,13 +84,13 @@
         el: '#app',
         data: function () {
             return {
-                committees: {% autoescape off %}{{ committees }}{% endautoescape %},
-                committee: '{% autoescape off %}{{ committee }}{% endautoescape %}'
+                cost_centres: {% autoescape off %}{{ cost_centres }}{% endautoescape %},
+                cost_centre: '{% autoescape off %}{{ cost_centre }}{% endautoescape %}'
             }
         },
         methods: {
             move() {
-                window.location.href = '?page=' + getParameterByName('page') + '&committee=' + this.committee
+                window.location.href = '?page=' + getParameterByName('page') + '&cost_centre=' + this.cost_centre
             }
         },
         created: function() {
