secondary secondary secondary secondary secondary secondary secondary

--- a/templates/expenses/show.html
+++ b/templates/expenses/show.html
@@ -53,7 +53,7 @@
                     {{ expense_part.secondary_cost_centre }}
                 </td>
                 <td>
-                    <span class="value">{{ expense_part.secondary_secondary_cost_centre }}</span>
+                    <span class="value">{{ expense_part.secondary_cost_centre }}</span>
                 </td>
                 <td>
                     <span class="value">{{ expense_part.budget_line }}</span>
