--- a/templates/invoices/show.html
+++ b/templates/invoices/show.html
@@ -62,7 +62,7 @@
                     {{ invoice_part.secondary_cost_centre }}
                 </td>
                 <td>
-                    <span class="value">{{ invoice_part.secondary_secondary_cost_centre }}</span>
+                    <span class="value">{{ invoice_part.secondary_cost_centre }}</span>
                 </td>
                 <td>
                     <span class="value">{{ invoice_part.budget_line_name }}</span>
